@@ -1,3 +1,7 @@
+2003-02-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>
+
+	* stack1.py: New test.
+
 2003-01-31  Peter Bienstman <Peter.Bienstman@rug.ac.be>
 
 	* stack0.py: New test.
